# biblion

./: .gitignore  AGENTS.md  CHANGELOG.md  ENRICH_REDESIGN_HANDOFF.md  LICENSE  README.md  TODO.md  enrich_dataflow.md  pyproject.toml
biblion/: __init__.py  __main__.py  config.py  db.py  embed.py  npy_slice.py  projects.py  rates.config  runtime.py  snapshot.py  text_normalization.py  titles.py
biblion/cache/: __init__.py  client.py  records.py
biblion/clients/: __init__.py  crossref.py  ncbi.py  openalex.py  ratelimit.py  s2_bulk.py  semanticscholar.py
biblion/enrich/: __init__.py  catalogue.py  compaction.py  compute.py  dedup.py  dispatcher.py  reader.py  shadow.py  solver.py
biblion/framework/: __init__.py  claims.py  context.py  module.py  orchestrator.py  state.py
biblion/merge/: __init__.py  aliasmap.py  backfill.py  combine.py  pending_resolver.py  resolve.py  resolver.py  writer.py
biblion/modules/: __init__.py  _bulk_common.py  acquire_seeds.py  bulk_abstracts.py  bulk_paper_ids.py  bulk_papers.py  enrich_biblio_crossref.py  enrich_metadata_ncbi.py  enrich_metadata_oa.py  enrich_metadata_s2.py  enrich_stubs_oa.py  expand_incoming_oa.py  expand_papers_s2.py  expand_seeds.py  export.py  flag_retractions.py  import_bib.py  import_ris.py  materialize_ghost_stubs.py  merge_identities.py  resolve_dois_oa.py  resolve_dois_s2.py  resolve_dois_via_pmid.py  resolve_dois_via_s2id.py  resolve_pending_dois.py  search_s2_factorial.py
claude_doc_dump/: ghost-node-positioning-spec.md  master-embedding-spec.md  menu-locality-audit-spec.md
docs/: user_guide.md
network_toy/: .gitignore  README.md  TOY_REMOVAL.md  cards.md  environment.yml  package.json  pytest.ini  serve.py
network_toy/app/: index.html  legacy.html
network_toy/doc/: biblion_data_model_and_query_guide.md  blend.md  citation-edge-salvage.md  citation-layout.md  citations.md  clustering.md  (+11 more)
plans/: dataset-picker-plan.md  labelling-improvement-plan.md  project-save-fix-plan.md  sql-search-plan.md  test-suite-plan.md  toy-removal-plan.md  ui-cleanup-plan.md
research-briefs/: fallworm-normalization.json  fallworm-normalization.md  faw-soil-microbiome-briefs.md
searches/: example.json
tag_categorisation/: apply_tag_categories.py  tag_categories.tsv
tests/: README.md  conftest.py
(+320 files in other folders)
